--- a/style.css
+++ b/style.css
@@ -42,3 +42,145 @@ footer span::before{
     }
     /* */
 }
+/* nohaila */
+/* ****************************nouhaila*********************************** */
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: antiquewhite;
+    margin: 0 auto;
+}
+
+.parent {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    height: 60px;
+    
+}
+
+.parent ol {
+    display: none;
+}
+
+#logo {
+    color: rgb(32, 32, 107);
+    font-size: medium;
+}
+
+ header ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style: none;
+    margin-top: 10px;
+   
+}
+
+header ul li a {
+    color: black;
+    text-decoration: none;
+    padding-left: 10px;
+    font-size: small;
+}
+
+header ol {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    list-style: none;
+    margin-top: 0px;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+  header ol li a {
+    color: black;
+    text-decoration: none;
+    
+
+}
+
+header button {
+    background: rgb(32, 32, 107);
+    color: white;
+    width: 80px;
+    height: 30px;
+    text-align: center;
+    box-shadow: 2px 3px gray;
+    border-radius: 10px 5px;
+    margin: 0;
+}
+
+header bottom:hover{
+    background-color:white ;
+    color: rgb(32, 32, 107);
+   
+}
+
+
+/* ************************************************ */
+@media only screen and (min-width: 467px) {
+
+    header .parent ol {
+        display: flex;
+        
+    }
+
+    header  ul li a {
+        padding-left: 15px;
+    }
+
+    header button {
+        width: 90px;
+    }
+     .parent{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+@media (max-width: 767px) {
+    /* Pour centrer le contenu */
+    body{
+        max-width: 500px;
+    }
+    /* */
+}
+/* ************************************************ */
+@media only screen and (min-width: 1024px) {
+
+    .parent ol {
+        display: flex;
+    }
+
+    header ol li a {
+        color: black;
+        text-decoration: none;
+        padding-left: 20px;
+        font-size: large;
+    }
+
+    header ul li a {
+        color: black;
+        text-decoration: none;
+        padding-left: 20px;
+        font-size: large;
+    }
+
+    header button {
+        width: 105px;
+        font-size: large;
+    }
+
+
+    /* Pour centrer le contenu */
+    body{
+        max-width: 1140px;
+    }
+    
+}
+/* ****************************nouhaila*********************************** */
